# forge-core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INVARIANTS.md  LICENSE  OPERATIONS.md  PHILOSOPHY.md  README.md  ROADMAP.md  SUPPORT.md  TODO.md  USAGE.md  build.rs  install.sh  openapi.yaml
deploy/: forge.conf.example  forge.service
docs/: INVARIANTS.md  LOCAL_QUICKSTART.md  PHILOSOPHY.md  ROADMAP.md  SUPPORT.md  USAGE.md  VPS.md  forge-v1-fsm-and-invariants.md  forge-v1-implementation-spec.md
docs/archive/: TODO.md
examples/: forge.conf  forge.env.example
schemas/: deployment-request.schema.json  event.schema.json  forge.project.schema.json  snapshot.schema.json
scripts/: package-release.sh  publish-release.sh
src/: api.rs  auth.rs  backups.rs  bootstrap.rs  caddy.rs  compose.rs  config.rs  convergence.rs  daemon.rs  deployments.rs  docker.rs  doctor.rs  events.rs  forge_yaml.rs  gateway_fallback.rs  github.rs  http.rs  invariants.rs  lib.rs  main.rs  manifest.rs  metrics.rs  probes.rs  process.rs  projects.rs  queue.rs  readiness.rs  reconciliation.rs  route_truth.rs  runtime.rs  runtime_env.rs  secrets.rs  source.rs  status.rs  storage.rs  topology.rs  upgrade.rs  users.rs  web_deploy.rs
static/: index.html
tests/: caddy_integration.rs  cli.rs  docker_integration.rs  e2e.rs  release.rs
tests/fixtures/bad-http-app/: Dockerfile
tests/fixtures/compose-app-redis/: Dockerfile  docker-compose.yml  server.py
tests/integration/: common.rs
web/: app.html  app.js  index.html  login.html  styles.css
(+7 files in other folders)
