[package]
name = "forge_core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.6"
base64 = "0.22.1"
hmac = "0.12.1"
hex = "0.4.3"
libc = "0.2"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
